# indox_Router

./: .env.example  .gitignore  CHANGELOG.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_GUIDE.md  Dockerfile  LICENSE  LOCAL_CODE_MODIFICATIONS.md  LOCAL_TESTING_GUIDE.md  PRODUCTION_DEPLOYMENT.md  RAILWAY_DEPLOYMENT.md  README.md  TESTING.md  add_tables.sql  check_db.py  convert_to_notebook.py  deploy.sh  docker-compose.yml  pyproject.toml  pytest.ini  rebuild_docker.sh  requirements-dev.txt  requirements.txt  run.py  run_all_tests.py  setup.py  start_indoxrouter.py  test_client.py  test_indoxrouter.py  test_local.py  test_server.py
dashboard/: api.py  (+5 more)
indoxRouter_server/: .env.example  .env.template  .gitignore  CREDENTIALS.md  DATABASE_SETUP.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  Dockerfile  MANIFEST.in  README.md  clear_db.py  development.env  docker-compose.yml  main.py  nginx.conf  production.env  pyproject.toml  requirements-dev.txt  requirements.txt  run_local_db.sh  setup.py  test_db.py  test_mistral.py
indoxRouter_server/admin/: Dockerfile  README.md  index.html  login.html  nginx.conf  styles.css  tailwind.config.ts  vite.config.ts
indoxRouter_server/admin3/: api-keys.js  api.js  constants.js  dashboard.js  dom.js  endpoint-tester.js  index.html  main.js  models.js  navigation.js  styles.css  usage.js  users.js  utils.js
indoxRouter_server/app/: __init__.py  constants.py  exceptions.py
indoxRouter_server/docs/: README.md  api-reference.md  architecture.md  authentication.md  configuration.md  contributing.md  database-schema.md  deployment.md  (+1 more)
(+424 files in other folders)
